bc images section

--- a/index.html
+++ b/index.html
@@ -5,21 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script type="text/javascript" src="./assets/js/script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                <a href="#"><img src="rt_responsive.jpg"></a>
-                <h1>Raphael Tapioca</h1>
-            </div>
-        </div>
-        <div class="row">
+    <div class="container"></div>
+        <section>
+            <div class="row" style="background-image: url(./assets/pics/bc.jpeg);">
                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <a href="#"><img src="projects.jpg"></a>
+                    <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                    <h1>Raphael Tapioca</h1>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row" style="background-color: black;">
+                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                    <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                    <h1>Raphael Tapioca</h1>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row" style="background-image: url(./assets/pics/bc2.jpeg);">
+                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                    <a href="#"><img id="tech" src="projects.jpg"></a>
                     <h1>Check out my projects...</h1>
                 </div>
             </div>
+        </section>
     </div>
 </body>
 </html>
