--- a/index.html
+++ b/index.html
@@ -6,32 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </head>
 <body>
-    <div class="container"></div>
-        <section>
-            <div class="row" style="background-image: url(./assets/pics/bc.jpeg);">
-                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
-                    <h1>Raphael Tapioca</h1>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+            <a class="navbar-brand" id="logo" href="#">[ Raphael Tapioca ]</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+            <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/github.png"></a></li>
+            <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/linkedin.png"></a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-full">
+        <section id="section1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                        <h1>Raphael Tapioca</h1>
+                        <p>
+                            <a href="#section3" class="btn muted-dark-buton">Click</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section>
-            <div class="row" style="background-color: black;">
-                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
-                    <h1>Raphael Tapioca</h1>
+        <section id="section2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                        <h1>Raphael Tapioca</h1>
+                    </div>
                 </div>
             </div>
         </section>
-        <section>
-            <div class="row" style="background-image: url(./assets/pics/bc2.jpeg);">
-                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <a href="#"><img id="tech" src="projects.jpg"></a>
-                    <h1>Check out my projects...</h1>
+        <section id="section3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <a href="#"><img id="tech" src="projects.jpg"></a>
+                        <h1>Check out my projects...</h1>
+                    </div>
                 </div>
             </div>
         </section>
