--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
                     <div class="col-lg-12">
                         <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
                         <h1>Raphael Tapioca</h1>
-                        <p>
-                            <a href="#section3" class="btn muted-dark-buton">Click</a>
-                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="link">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="btnWrap">
+                            <a href="#section3" class="btn btn-info" role="button">Click</a>
+                        </div>
                     </div>
                 </div>
             </div>
