scroll up clicking logo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                        <span id="picWrap">
+                            <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                        </span>
+                        <span id="header">
+                            <h1>hi! Let me help you build great web applications</h1>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="link">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="btnWrap">
+                            <a href="#section2" class="btn btn-info" role="button">Click</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
                         <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
                         <h1>Raphael Tapioca</h1>
                     </div>
@@ -41,16 +66,6 @@
                         <div class="btnWrap">
                             <a href="#section3" class="btn btn-info" role="button">Click</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="section2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
-                        <h1>Raphael Tapioca</h1>
                     </div>
                 </div>
             </div>
