--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
-                        <h1>Raphael Tapioca</h1>
+                        <!-- <a href="#"><img id="photo" src="rt_responsive.jpg"></a> -->
+                        <span id="upkeep">
+                            <h1>up-keep Maintenance</h1>
+                            <h3>Find the help you need for your home</h3>
+                        </span>
                     </div>
                 </div>
             </div>
