--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
@@ -18,8 +19,8 @@
             <a class="navbar-brand" id="logo" href="#">[ Raphael Tapioca ]</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-            <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/github.png"></a></li>
-            <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/linkedin.png"></a></li>
+            <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/icons/github.png"></a></li>
+            <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/icons/linkedin.png"></a></li>
             </ul>
         </div>
     </nav>
@@ -35,15 +36,9 @@
                             <h1>hi! Let me help you build great web applications</h1>
                         </span>
                     </div>
-                </div>
-            </div>
-        </section>
-        <section id="link">
-            <div class="container">
-                <div class="row">
                     <div class="col-lg-12">
-                        <div class="btnWrap">
-                            <a href="#section2" class="btn btn-info" role="button">Click</a>
+                        <div class="next">
+                            <a href="#section2" class="button button1" role="button">$ git up-keep</a>
                         </div>
                     </div>
                 </div>
@@ -52,12 +47,52 @@
         <section id="section2">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <!-- <a href="#"><img id="photo" src="rt_responsive.jpg"></a> -->
+                    <div class="col-lg-5"></div>
+                    <div class="col-lg-7">
                         <span id="upkeep">
-                            <h1>up-keep Maintenance</h1>
-                            <h3>Find the help you need for your home</h3>
+                            <a href="http://up-keeps.herokuapp.com" target="_blank"><h1>up-keep</h1></a>
+                            <h3>Find preventative maintenance for you home</h3>
+                            <span class="tech2">
+                                <img src="./assets/pics/icons/html5.png" alt="HTML5">
+                                <img src="./assets/pics/icons/css3.png" alt="CSS3">
+                                <img src="./assets/pics/icons/nodejs.png" alt="NodeJS">
+                                <img src="./assets/pics/icons/express.png" alt="Express">
+                                <img src="./assets/pics/icons/sequelize.png" alt="Sequelize">
+                                <img src="./assets/pics/icons/mysql.png" alt="MySQL">
+                                <img src="./assets/pics/icons/hdb.png" alt="Handlebars">
+                            </span>
                         </span>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="next">
+                            <a href="#section3" class="button button1" role="button">$ git purple tree</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <span id="purple">
+                            <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank"><h1><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
+                            <h3>Choose your adventure story book</h3>
+                            <span id="award">
+                                <img src="./assets/pics/icons/award.png" alt="Award">
+                                <h4>Most Creative Award</h4>
+                            </span>
+                            <span class="tech3">
+                                <img src="./assets/pics/icons/html5.png" alt="HTML5">
+                                <img src="./assets/pics/icons/css3.png" alt="CSS3">
+                                <img src="./assets/pics/icons/jquery.png" alt="jQuery">
+                                <img src="./assets/pics/icons/json.png" alt="JSON">
+                                <img src="./assets/pics/icons/api.png" alt="API">
+                            </span>
+                        </span>
+                    </div>
+                    <div class="col-lg-5">
+                        <img id="uni" src="./assets/pics/bc/giphy.gif" alt="Purple Tree">
                     </div>
                 </div>
             </div>
@@ -67,18 +102,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="btnWrap">
-                            <a href="#section3" class="btn btn-info" role="button">Click</a>
+                            <a href="#" class="btn btn-info" role="button">Click</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="section3">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <a href="#"><img id="tech" src="projects.jpg"></a>
-                        <h1>Check out my projects...</h1>
                     </div>
                 </div>
             </div>
