--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell|Rock+Salt" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,13 +38,45 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="next">
-                            <a href="#section2" class="button button1" role="button">$ git up-keep</a>
+                            <a href="#section2" class="button button1" role="button">design</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section id="section2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div id="drawing">
+                            <h1>Back to the drawing board...</h1>
+                        </br>
+                            <h2>Plan before developing</h2>
+                            <br>
+                            <ol>
+                                <li>wireframe before starting to code</li>
+                                <li>Go step-by-step from nothing to the result</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div id="sketch">
+                            <img src="./assets/drawing.png" alt="Flow">
+                        </div>
+                        <div id="sub-sketch">
+                            <img src="./assets/storyflow.png" alt="Story">
+                            <img src="./assets/Sketch.png" alt="Sketch">
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="next">
+                            <a href="#section3" class="button button2" role="button">up-keep</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section3">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5"></div>
@@ -65,13 +97,13 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="next">
-                            <a href="#section3" class="button button1" role="button">$ git purple tree</a>
+                            <a href="#section4" class="button button3" role="button">purple tree</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="section3">
+        <section id="section4">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -93,17 +125,6 @@
                     </div>
                     <div class="col-lg-5">
                         <img id="uni" src="./assets/pics/bc/giphy.gif" alt="Purple Tree">
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="link">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="btnWrap">
-                            <a href="#" class="btn btn-info" role="button">Click</a>
-                        </div>
                     </div>
                 </div>
             </div>
