--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
                     <div class="col-lg-5">
                         <img id="uni" src="./assets/pics/bc/giphy.gif" alt="Purple Tree">
                     </div>
+                    <div class="col-lg-12">
+                        <div class="next">
+                            <a href="#section5" class="button button4" role="button">Giphy</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
