layout on drawing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <h2>Plan before developing</h2>
                             <br>
                             <ol>
-                                <li>wireframe before starting to code</li>
+                                <li>Wireframe before starting to code</li>
                                 <li>Go step-by-step from nothing to the result</li>
                             </ol>
                         </div>
