--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="section1">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span id="picWrap">
                             <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
                         </span>
@@ -36,7 +36,7 @@
                             <h1>hi! Let me help you build great web applications</h1>
                         </span>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="next">
                             <a href="#section2" class="button button1" role="button">design</a>
                         </div>
@@ -47,7 +47,7 @@
         <section id="section2">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                         <div id="drawing">
                             <h1>Back to the drawing board...</h1>
                         </br>
@@ -59,7 +59,7 @@
                             </ol>
                         </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <div id="sketch">
                             <img src="./assets/drawing.png" alt="Flow">
                         </div>
@@ -68,7 +68,7 @@
                             <img src="./assets/Sketch.png" alt="Sketch">
                         </div>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="next">
                             <a href="#section3" class="button button2" role="button">up-keep</a>
                         </div>
@@ -79,8 +79,8 @@
         <section id="section3">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5"></div>
-                    <div class="col-lg-7">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5"></div>
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="upkeep">
                             <a href="http://up-keeps.herokuapp.com" target="_blank"><h1>up-keep</h1></a>
                             <h3>Find preventative maintenance for you home</h3>
@@ -95,7 +95,7 @@
                             </span>
                         </span>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="next">
                             <a href="#section4" class="button button3" role="button">purple tree</a>
                         </div>
@@ -106,7 +106,7 @@
         <section id="section4">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="purple">
                             <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank"><h1><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
                             <h3>Choose your adventure story book</h3>
@@ -123,10 +123,10 @@
                             </span>
                         </span>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                         <img id="uni" src="./assets/pics/bc/giphy.gif" alt="Purple Tree">
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="next">
                             <a href="#section5" class="button button4" role="button">Giphy</a>
                         </div>
