--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ Raphael Tapioca }}</title>
+    <title>Raphael Tapioca</title>
+    <link rel="shortcut icon" type="image/png" href="739019.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Allerta+Stencil|Schoolbell|Rock+Salt" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -16,11 +17,11 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-            <a class="navbar-brand" id="logo" href="#">{{ Raphael Tapioca }}</a>
+                <a class="navbar-brand" id="logo" href="#">{{ Raphael Tapioca }}</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-            <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/icons/github.png"></a></li>
-            <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/icons/linkedin.png"></a></li>
+                <li class="social"><a href="https://github.com/raphatapi" target="_blank"><img src="./assets/pics/icons/github.png"></a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/raphael-tapioca" target="_blank"><img src="./assets/pics/icons/linkedin.png"></a></li>
             </ul>
         </div>
     </nav>
@@ -30,10 +31,11 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <span id="picWrap">
-                            <a href="#"><img id="photo" src="rt_responsive.jpg"></a>
+                            <a href="#"><img id="photo" src="rt.jpg"></a>
                         </span>
                         <span id="header">
                             <h1>hi! Let me help you build great web applications</h1>
+                            <a href="https://science-news.herokuapp.com/" target="_blank"><h3>This link is for my TAs only!!</h3></a>
                         </span>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -130,6 +132,55 @@
                         <div class="next">
                             <a href="#section5" class="button button4" role="button">Giphy</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section5">
+            <div class="container">
+                <div class="row gallery"> 
+                    <div class="column pics">
+                        <div class="tile">
+                            <img src="./assets/pics/projects/bamazon.png" style="width:100%">
+                            <div class="content">
+                                <h3>Heading</h3>
+                                <p>Lorem ipsum..</p>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <img src="./assets/pics/projects/hangman.png" style="width:100%">
+                            <div class="content">
+                                <h3>Heading</h3>
+                                <p>Lorem ipsum..</p>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <img src="./assets/pics/projects/crystal.png" style="width:100%">
+                            <div class="content">
+                                <h3>Heading</h3>
+                                <p>Lorem ipsum..</p>
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <img src="./assets/pics/projects/friendfinder.png" style="width:100%">
+                            <div class="content">
+                                <h3>Heading</h3>
+                                <p>Lorem ipsum..</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column pics">
+                        <img src="./assets/pics/projects/burger.png" style="width:100%">
+                        <img src="./assets/pics/projects/giphy.png" style="width:100%">
+                    </div>  
+                    <div class="column pics">
+                        <img src="./assets/pics/projects/constructor.png" style="width:100%">
+                        <img src="./assets/pics/projects/trivia.png" style="width:100%">
+                    </div>
+                    <div class="column pics">
+                        <img src="./assets/pics/projects/sequelized.png" style="width:100%">
+                        <img src="./assets/pics/projects/train.png" style="width:100%">
+                        <img src="./assets/pics/projects/liri.png" style="width:100%">
                     </div>
                 </div>
             </div>
