--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </span>
                         <span id="header">
                             <h1>hi! Let me help you build great web applications</h1>
-                            <a href="https://science-news.herokuapp.com/" target="_blank"><h3>This link is for my TAs only!!</h3></a>
+                            <a href="https://science-news.herokuapp.com/" target="_blank"><h3 style="color:aliceblue;">This link is for my TAs only!!</h3></a>
                         </span>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
