--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </span>
                         <span id="header">
                             <h1>hi! Let me help you build great web applications</h1>
-                            <a href="https://science-news.herokuapp.com/" target="_blank"><h3 style="color:aliceblue;">This link is for my TAs only!!</h3></a>
+                            <!-- <a href="https://science-news.herokuapp.com/" target="_blank"><h3 style="color:aliceblue;">This link is for my TAs only!!</h3></a> -->
                         </span>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="next">
-                            <a href="#section5" class="button button4" role="button">Giphy</a>
+                            <a href="#section5" class="button button4" role="button">Projects</a>
                         </div>
                     </div>
                 </div>
@@ -138,49 +138,110 @@
         </section>
         <section id="section5">
             <div class="container">
-                <div class="row gallery"> 
+                <div class="row gallery">
                     <div class="column pics">
-                        <div class="tile">
-                            <img src="./assets/pics/projects/bamazon.png" style="width:100%">
-                            <div class="content">
-                                <h3>Heading</h3>
-                                <p>Lorem ipsum..</p>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
+                            <img src="./assets/pics/projects/bamazon.png" />
                         </div>
-                        <div class="tile">
-                            <img src="./assets/pics/projects/hangman.png" style="width:100%">
-                            <div class="content">
-                                <h3>Heading</h3>
-                                <p>Lorem ipsum..</p>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
+                            <img src="./assets/pics/projects/hangman.png" />
                         </div>
-                        <div class="tile">
-                            <img src="./assets/pics/projects/crystal.png" style="width:100%">
-                            <div class="content">
-                                <h3>Heading</h3>
-                                <p>Lorem ipsum..</p>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                        </div>
-                        <div class="tile">
-                            <img src="./assets/pics/projects/friendfinder.png" style="width:100%">
-                            <div class="content">
-                                <h3>Heading</h3>
-                                <p>Lorem ipsum..</p>
-                            </div>
+                            <img src="./assets/pics/projects/crystal.png" />
                         </div>
                     </div>
                     <div class="column pics">
-                        <img src="./assets/pics/projects/burger.png" style="width:100%">
-                        <img src="./assets/pics/projects/giphy.png" style="width:100%">
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/burger.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/giphy.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/friendfinder.png" />
+                        </div>
                     </div>  
                     <div class="column pics">
-                        <img src="./assets/pics/projects/constructor.png" style="width:100%">
-                        <img src="./assets/pics/projects/trivia.png" style="width:100%">
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/constructor.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/trivia.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/friendfinder.png" />
+                        </div>
                     </div>
                     <div class="column pics">
-                        <img src="./assets/pics/projects/sequelized.png" style="width:100%">
-                        <img src="./assets/pics/projects/train.png" style="width:100%">
-                        <img src="./assets/pics/projects/liri.png" style="width:100%">
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/sequelized.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/train.png" />
+                        </div>
+                        <div class="projContainer">
+                            <div class="projInfoContainer">
+                                <h2>Project Title</h2>
+                                <p class="projCat">Category</p>
+                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            </div>
+                            <img src="./assets/pics/projects/liri.png" />
+                        </div>
                     </div>
                 </div>
             </div>
