projects display and links

--- a/index.html
+++ b/index.html
@@ -141,106 +141,106 @@
                 <div class="row gallery">
                     <div class="column pics">
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/bamazon.png" />
+                            <img src="./assets/pics/projects/bamazon.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/hangman.png" />
+                            <img src="./assets/pics/projects/hangman.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/crystal.png" />
+                            <img src="./assets/pics/projects/crystal.png" /></a>
                         </div>
                     </div>
                     <div class="column pics">
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/burger.png" />
+                            <img src="./assets/pics/projects/burger.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                                <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/giphy.png" />
+                            <img src="./assets/pics/projects/giphy.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/friendfinder.png" />
+                            <img src="./assets/pics/projects/friendfinder.png" /></a>
                         </div>
                     </div>  
                     <div class="column pics">
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/constructor.png" />
+                            <img src="./assets/pics/projects/constructor.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/trivia.png" />
+                            <img src="./assets/pics/projects/trivia.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/friendfinder.png" />
+                            <img src="./assets/pics/projects/friendfinder.png" /></a>
                         </div>
                     </div>
                     <div class="column pics">
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/sequelized.png" />
+                            <img src="./assets/pics/projects/sequelized.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/train.png" />
+                            <img src="./assets/pics/projects/train.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <div class="projInfoContainer">
+                            <a href="#" target="_blank"><div class="projInfoContainer">
                                 <h2>Project Title</h2>
                                 <p class="projCat">Category</p>
                                 <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
                             </div>
-                            <img src="./assets/pics/projects/liri.png" />
+                            <img src="./assets/pics/projects/liri.png" /></a>
                         </div>
                     </div>
                 </div>
