--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                         <span id="upkeep">
                             <a href="http://up-keeps.herokuapp.com" target="_blank"><h1>up-keep</h1></a>
                             <h3>Find preventative maintenance for you home</h3>
+                            <span id="award-useful">
+                                <img src="./assets/pics/icons/award.png" alt="Award">
+                                <h4>Most Creative Award</h4>
+                            </span>
                             <span class="tech2">
                                 <img src="./assets/pics/icons/html5.png" alt="HTML5">
                                 <img src="./assets/pics/icons/css3.png" alt="CSS3">
@@ -138,29 +142,30 @@
         </section>
         <section id="section5">
             <div class="container">
+                <h1 id="bee">The Beehive</h1>
                 <div class="row gallery">
                     <div class="column pics">
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://github.com/raphatapi/bamazon" target="_blank"><div class="projInfoContainer">
+                                <h2>Bamazon</h2>
+                                <p class="projCat">NodeJS & MySQL</p>
+                                <p class="projSpec">Online store using the terminal.<br />Purchase or manage products</p>
                             </div>
                             <img src="./assets/pics/projects/bamazon.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://raphatapi.github.io/Hangman-Game/" target="_blank"><div class="projInfoContainer">
+                                <h2>Hangman</h2>
+                                <p class="projCat">HTML & JavaScript</p>
+                                <p class="projSpec">Guess the word.<br />Choose the right letter</p>
                             </div>
                             <img src="./assets/pics/projects/hangman.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://raphatapi.github.io/Crystals-Collector-Game/" target="_blank"><div class="projInfoContainer">
+                                <h2>Crystal Collector</h2>
+                                <p class="projCat">Bootstrap & JavaScript</p>
+                                <p class="projSpec">Guess the correct number.<br />Add numbers by clicking on crystals</p>
                             </div>
                             <img src="./assets/pics/projects/crystal.png" /></a>
                         </div>
