--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <h3>Find preventative maintenance for you home</h3>
                             <span id="award-useful">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
-                                <h4>Most Creative Award</h4>
+                                <h4>Most Useful Award</h4>
                             </span>
                             <span class="tech2">
                                 <img src="./assets/pics/icons/html5.png" alt="HTML5">
