--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </head>
 <body>
@@ -84,7 +85,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5"></div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="upkeep">
-                            <a href="http://up-keeps.herokuapp.com" target="_blank"><h1>up-keep</h1></a>
+                            <a href="http://up-keeps.herokuapp.com" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/preventative.gif"><h1>up-keep</h1></a>
                             <h3>Find preventative maintenance for you home</h3>
                             <span id="award-useful">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
@@ -114,7 +115,8 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
                         <span id="purple">
-                            <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank"><h1><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
+                            <a id="tree" href="https://raphatapi.github.io/purple-tree/index.html" target="_blank" data-toggle="popover" data-trigger="hover" data-img="./assets/purple.gif">
+                            <h1><img src="./assets/pics/icons/purpletree.png">Purple Tree</h1></a>
                             <h3>Choose your adventure story book</h3>
                             <span id="award">
                                 <img src="./assets/pics/icons/award.png" alt="Award">
@@ -172,44 +174,44 @@
                     </div>
                     <div class="column pics">
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://burger-bracket.herokuapp.com/burgers" target="_blank"><div class="projInfoContainer">
+                                <h2>Burger App</h2>
+                                <p class="projCat">Handlebars, MySQL & NodeJS</p>
+                                <p class="projSpec">This application allows the user to add the burger of their choice and "devoure it".</p>
                             </div>
                             <img src="./assets/pics/projects/burger.png" /></a>
                         </div>
                         <div class="projContainer">
-                                <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                                <a href="https://raphatapi.github.io/Giphy/" target="_blank"><div class="projInfoContainer">
+                                <h2>Giphy</h2>
+                                <p class="projCat">JavaScript & API</p>
+                                <p class="projSpec">Search for your favorite gifs.<br />You can also pause and play them</p>
                             </div>
                             <img src="./assets/pics/projects/giphy.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://match-friend.herokuapp.com/" target="_blank"><div class="projInfoContainer">
+                                <h2>Friend Finder</h2>
+                                <p class="projCat">ExpressJS & NodeJS</p>
+                                <p class="projSpec">Friend finder will find your best match.<br />Get Started!</p>
                             </div>
                             <img src="./assets/pics/projects/friendfinder.png" /></a>
                         </div>
                     </div>  
                     <div class="column pics">
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://github.com/raphatapi/constructor-hangman" target="_blank"><div class="projInfoContainer">
+                                <h2>Constructor Hangman</h2>
+                                <p class="projCat">JavaScript & NPM</p>
+                                <p class="projSpec">Play hangman using the terminal.<br />Guess the right letter and find the word</p>
                             </div>
                             <img src="./assets/pics/projects/constructor.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://raphatapi.github.io/TriviaGame/" target="_blank"><div class="projInfoContainer">
+                                <h2>Trivia</h2>
+                                <p class="projCat">HTML & JavaScript</p>
+                                <p class="projSpec">Answer questions about Winnie the Pooh.<br />But watch the time!</p>
                             </div>
                             <img src="./assets/pics/projects/trivia.png" /></a>
                         </div>
@@ -224,26 +226,26 @@
                     </div>
                     <div class="column pics">
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://sequelize-burger-bracket.herokuapp.com/burger" target="_blank"><div class="projInfoContainer">
+                                <h2>Sequelize Burger</h2>
+                                <p class="projCat">Sequelize & MySQL</p>
+                                <p class="projSpec">Add the burger of your choice, add your name and "devoure it".</p>
                             </div>
                             <img src="./assets/pics/projects/sequelized.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://raphatapi.github.io/train-timetable/" target="_blank"><div class="projInfoContainer">
+                                <h2>Train Timetable</h2>
+                                <p class="projCat">jQuery & MomentJS</p>
+                                <p class="projSpec">Keep track of train's times.<br />Add your trains, too</p>
                             </div>
                             <img src="./assets/pics/projects/train.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://github.com/raphatapi/liri-node-app" target="_blank"><div class="projInfoContainer">
+                                <h2>Liri Search</h2>
+                                <p class="projCat">NodeJS & API</p>
+                                <p class="projSpec">Choose from the subjects<br />Twitter, Spotify and OMDB</p>
                             </div>
                             <img src="./assets/pics/projects/liri.png" /></a>
                         </div>
