--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     </nav>
     <div class="container-full">
         <section id="section1">
+                <!-- <div class="menu-icon" onclick="this.classList.toggle('hover');Drop(0)">
+                        <div class="menu-bar menu-bar1"></div>
+                        <div class="menu-bar menu-bar2"></div>
+                        <div class="menu-bar menu-bar3"></div>
+                    </div>
+                    <div class="menu">
+                        <div class="menu-con" style="background:IndianRed;"><p>HOME</p></div>
+                        <div class="menu-con" style="background:rgb(160,160,170);"><p>GALLERY</p></div>  
+                        <div class="menu-con" style="background:mediumseagreen;"><p>PRODUCTS</p></div> 
+                        <div class="menu-con" style="background:teal;"><p>ABOUT</p></div> 
+                        <div class="menu-con" style="background:rgb(70,70,70);"><p>CONTACT</p></div>
+                    </div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -216,12 +228,12 @@
                             <img src="./assets/pics/projects/trivia.png" /></a>
                         </div>
                         <div class="projContainer">
-                            <a href="#" target="_blank"><div class="projInfoContainer">
-                                <h2>Project Title</h2>
-                                <p class="projCat">Category</p>
-                                <p class="projSpec">Stuff about this project.<br />More stuff about it, too</p>
+                            <a href="https://nytreact-mern.herokuapp.com/" target="_blank"><div class="projInfoContainer">
+                                <h2>NYTimes Search</h2>
+                                <p class="projCat">MERN & Heroku</p>
+                                <p class="projSpec">Search for articles.<br />Save them for later, delete them when done</p>
                             </div>
-                            <img src="./assets/pics/projects/friendfinder.png" /></a>
+                            <img src="./assets/pics/projects/nytreact.png" /></a>
                         </div>
                     </div>
                     <div class="column pics">
