--- a/index.html
+++ b/index.html
@@ -267,6 +267,32 @@
                             <img src="./assets/pics/projects/liri.png" /></a>
                         </div>
                     </div>
+                    <div class="column pics">
+                        <div class="projContainer">
+                            <a href="https://www.takthat.com" target="_blank"><div class="projInfoContainer">
+                                <h2>Tak That</h2>
+                                <p class="projCat">MERN Stack</p>
+                                <p class="projSpec">A bulletin board for the digital age.<br />Create and share notes with family and friends</p>
+                            </div>
+                            <img src="./assets/pics/projects/takthat.png" /></a>
+                        </div>
+                        <div class="projContainer">
+                            <a href="https://science-news.herokuapp.com/" target="_blank"><div class="projInfoContainer">
+                                <h2>Science News</h2>
+                                <p class="projCat">MongoDB & API</p>
+                                <p class="projSpec">Stay up-to-date with science news.<br />Scraped from NYTimes</p>
+                            </div>
+                            <img src="./assets/pics/projects/scraper.png" /></a>
+                        </div>
+                        <!-- <div class="projContainer">
+                            <a href="https://github.com/raphatapi/liri-node-app" target="_blank"><div class="projInfoContainer">
+                                <h2>Liri Search</h2>
+                                <p class="projCat">NodeJS & API</p>
+                                <p class="projSpec">Choose from the subjects<br />Twitter, Spotify and OMDB</p>
+                            </div>
+                            <img src="./assets/pics/projects/liri.png" /></a>
+                        </div> -->
+                    </div>
                 </div>
             </div>
         </section>
