--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
                             </div>
                             <img src="./assets/pics/projects/crystal.png" /></a>
                         </div>
+                        <div class="projContainer" style="visibility:hidden">
+                            <a href="https://raphatapi.github.io/Crystals-Collector-Game/" target="_blank"><div class="projInfoContainer">
+                                <h2>Crystal Collector</h2>
+                                <p class="projCat">Bootstrap & JavaScript</p>
+                                <p class="projSpec">Guess the correct number.<br />Add numbers by clicking on crystals</p>
+                            </div>
+                            <img src="./assets/pics/projects/crystal.png" /></a>
+                        </div>
                     </div>
                     <div class="column pics">
                         <div class="projContainer">
@@ -281,6 +289,14 @@
                                 <p class="projSpec">Choose from the subjects<br />Twitter, Spotify and OMDB</p>
                             </div>
                             <img src="./assets/pics/projects/liri.png" /></a>
+                        </div>
+                        <div class="projContainer" style="visibility:hidden">
+                            <a href="https://raphatapi.github.io/Crystals-Collector-Game/" target="_blank"><div class="projInfoContainer">
+                                <h2>Crystal Collector</h2>
+                                <p class="projCat">Bootstrap & JavaScript</p>
+                                <p class="projSpec">Guess the correct number.<br />Add numbers by clicking on crystals</p>
+                            </div>
+                            <img src="./assets/pics/projects/crystal.png" /></a>
                         </div>
                     </div>
                 </div>
