--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <a href="https://www.takthat.com" target="_blank"><div class="projInfoContainer">
                                 <h2>Tak That</h2>
                                 <p class="projCat">MERN Stack</p>
-                                <p class="projSpec">A bulletin board for the digital age.<br />Create and share notes with family and friends</p>
+                                <p class="projSpec">A bulletin board for the digital age.<br />Share notes with family and friends</p>
                             </div>
                             <img src="./assets/pics/projects/takthat.png" /></a>
                         </div>
