--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </ul>
         </div>
     </nav>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="container-full">
         <section id="section1">
             <div class="container">
@@ -40,8 +41,7 @@
                             <a href="#"><img id="photo" class="animated tada" src="rt.jpg"></a>
                         </span>
                         <span id="header">
-                            <h1>hi! Let me help you build great web applications</h1>
-                            <!-- <a href="https://science-news.herokuapp.com/" target="_blank"><h3 style="color:aliceblue;">This link is for my TAs only!!</h3></a> -->
+                            <h1>hi! Let's build great web applications</h1>
                         </span>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -60,7 +60,7 @@
                             <h1>Back to the drawing board...</h1>
                         </br>
                             <h2>Plan before developing</h2>
-                            <br>
+                            <!-- <br> -->
                             <ol>
                                 <li>Wireframe before starting to code</li>
                                 <li>Go step-by-step from nothing to the result</li>
@@ -291,6 +291,8 @@
             </div>
         </section>
     </div>
-    <footer class="footer"><h1>&copy Tapioca Design 2018</h1></footer>
+    <footer class="footer">
+        <a id="copy" href="#"><h1>&copy Tapioca Design 2018</h1></a>
+    </footer>
 </body>
 </html>
